<resources>
    <string name="app_name">MarkPage</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Accueil</string>
    <string name="second_fragment_label">Ajouter un livre</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="total_pages">Total Pages</string>
    <string name="current_page">Current Page</string>
    <string name="add_book">Add Book</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="add_book1">Add Book</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>